# HiSmartStudy

./: .gitignore  HiSmartStudy.sql  README.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/ai_models/: sbert.py
backend/app/routers/admin/: admin.py
backend/app/routers/kiosk/: kiosk.py
backend/app/routers/ml/: _archive.py  detect.py  statics.py  sugestion.py
backend/app/routers/web/: auth.py  mypage.py  plan.py  ticket.py
backend/app/utils/: auth_utils.py
camera/: .gitignore  Dockerfile  pyproject.toml
camera/app/: app.py
camera/app/routers/: health_api.py  vision_api.py
camera/app/vision/: camera_initializer.py  camera_manager.py  camera_worker.py  seat_manager.py  seat_state_machine.py
camera/app/vision/config/: camera_config.json
camera/app/vision/schemas/: schemas.py
camera/app/vision/utils/: camera_config.generated.json  camera_to_rois.py  detectors.py
frontend/: Dockerfile  README.md  default.conf  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/kiosk/: KioskApp.jsx
frontend/src/kiosk/components/: KioskAlertModal.jsx  KioskCheckIn.jsx  KioskCheckOut.jsx  KioskHeader.jsx  KioskPaymentModal.jsx
frontend/src/kiosk/screens/: KioskLogin.jsx  KioskPhoneInput.jsx  KioskPinInput.jsx  KioskSeatStatus.jsx  KioskTicketList.jsx  KioskUserSelect.jsx
frontend/src/utils/: authApi.js  authClient.js  useAuthStores.js
frontend/src/web/components/: AdminHeader.jsx  AdminLayout.jsx  AdminSidebar.jsx  AuthButton.jsx  (+14 more)
(+21 files in other folders)
