[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "bcrypt==4.0.1",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "fastapi-mail[httpx]>=1.5.8",
    "httpx>=0.28.1",
    "langchain>=1.1.3",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.3",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "passlib[bcrypt]==1.7.4",
    "pathlib>=1.0.1",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers==2.7.0",
    "transformers == 4.40.2",
    "sqlalchemy>=2.0.44",
    "torch==2.2.2",
    "ultralytics>=8.3.232",
    "uvicorn>=0.38.0",
    "asyncio>=4.0.0",
]
